--- a/app/src/pages/404.astro
+++ b/app/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import { IconButton } from "../components/icon-button";
+import { IconButton } from "../components/primitives/icon-button";
 import { ThemeSelect } from "../components/theme";
 import Page from "../layouts/Page.astro";
 
