--- a/app/src/pages/blog/index.astro
+++ b/app/src/pages/blog/index.astro
@@ -6,6 +6,7 @@ import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 
 import ImageIcon from "~icons/material-symbols-rounded/image:outlined&opticalSize=48";
+import { Filters } from "../../components/filters";
 
 const posts = (await getCollection("blog"))
   .sort(
@@ -16,47 +17,49 @@ const posts = (await getCollection("blog"))
 
 <Page>
   <Header />
-  <main>
-    <ul class="posts">
-      {
-        posts.map(({ slug, data: post }) => {
-          const postUrl = `/blog/${slug}/`;
-          const [author, ...authors] = post.authors;
-          return (
-            <li>
-              <div class="post">
-                <a
-                  class="card"
-                  href={postUrl}>
-                    <div class="cover">
-                      <ImageIcon width={48} height={48} />
-                    </div>
-                    <div class="content">
-                      <h3 class="title">{post.title}</h3>
-                    </div>
-                </a>
-                <div class="authors">
-                  <a class="author" href={`/blog/tags/author/${author.id}/`}>
-                      {
-                        author.avatar
-                          && <Image
-                                class="avatar"
-                                src={author.avatar.src}
-                                alt={author.avatar.alt ?? ""} />
-                      }
-                      {author.name}
+  <main data-pagefind-ignore>
+    <article>
+      <ul class="posts">
+        {
+          posts.map(({ slug, data: post }) => {
+            const postUrl = `/blog/${slug}/`;
+            const [author, ...authors] = post.authors;
+            return (
+              <li>
+                <div class="post">
+                  <a
+                    class="card"
+                    href={postUrl}>
+                      <div class="cover">
+                        <ImageIcon width={48} height={48} />
+                      </div>
+                      <div class="content">
+                        <h3 class="title">{post.title}</h3>
+                      </div>
                   </a>
-                  {
-                    authors.length > 0
-                      && <a class="author more" href={postUrl}>+{authors.length} more</a>
-                  }
+                  <div class="authors">
+                    <a class="author" href={`/blog/tags/author/${author.id}/`}>
+                        {
+                          author.avatar
+                            && <Image
+                                  class="avatar"
+                                  src={author.avatar.src}
+                                  alt={author.avatar.alt ?? ""} />
+                        }
+                        {author.name}
+                    </a>
+                    {
+                      authors.length > 0
+                        && <a class="author more" href={postUrl}>+{authors.length} more</a>
+                    }
+                  </div>
                 </div>
-              </div>
-            </li>
-          );
-        })
-      }
-    </ul>
+              </li>
+            );
+          })
+        }
+      </ul>
+    </article>
   </main>
   <Footer />
 </Page>
@@ -64,25 +67,50 @@ const posts = (await getCollection("blog"))
 <style>
   main {
     display: block;
-    height: 1000px;
+  }
+
+  article {
+    width: 100%;
+    max-width: 960px;
+
+    margin: 64px auto 24px auto;
+    padding: 0 24px;
+  }
+  li {
+    display: contents;
   }
 
   .posts {
     list-style: none;
 
-    display: flex;
+    /* display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 24px; */
+    display: grid;
+    place-items: center;
+    place-content: center;
+    grid-template-columns: repeat(1, 1fr);
     gap: 24px;
+  }
 
-    width: 100%;
-    max-width: 840px;
-
-    margin: 0 auto;
+  @media only screen and (min-width: 600px) {
+    .posts {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media only screen and (min-width: 1200px) {
+    .posts {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
   .post {
+    width: 100%;
+    height: 100%;
+    grid-column: span 1;
+
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -91,17 +119,21 @@ const posts = (await getCollection("blog"))
   }
 
   .card {
+    -webkit-tap-highlight-color: transparent;
+    width: 100%;
+    height: 100%;
     text-decoration: none;
     color: var(--color-on-surface);
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 
     background-color: var(--color-surface);
     border: 1px solid var(--color-outline-variant);
     border-radius: 28px;
+
+    transition: background-color 105ms linear;
 
     @media (hover: hover) {
       &:hover {
@@ -150,6 +182,7 @@ const posts = (await getCollection("blog"))
   }
 
   .author {
+    -webkit-tap-highlight-color: transparent;
     width: fit-content;
 
     display: flex;
@@ -163,18 +196,27 @@ const posts = (await getCollection("blog"))
     line-height: var(--text-label-large-line-height);
     letter-spacing: var(--text-label-large-letter-spacing);
     text-decoration: none;
+    font-variation-settings: "GRAD" 0;
     color: var(--color-on-surface-variant);
 
     padding: 8px;
     border-radius: 9999px;
+
+    transition-property: background-color, color;
+    transition-duration: 105ms;
+    transition-timing-function: var(--easing-standard);
+
     @media (hover: hover) {
       &:hover {
         background-color: color-mix(in srgb, var(--color-surface), var(--color-on-surface-variant) 8%);
         color: var(--color-primary);
+        font-variation-settings: "GRAD" 50;
       }
     }
     &:active {
       background-color: color-mix(in srgb, var(--color-surface), var(--color-on-surface-variant) 10%);
+      color: var(--color-primary);
+      font-variation-settings: "GRAD" 150;
     }
   }
 
