--- a/app/src/pages/blog/index.astro
+++ b/app/src/pages/blog/index.astro
@@ -35,6 +35,7 @@ const posts = (await getCollection("blog"))
                       </div>
                       <div class="content">
                         <h3 class="title">{post.title}</h3>
+                        {post.description && <p>{post.description}</p>}
                       </div>
                   </a>
                   <div class="authors">
@@ -65,13 +66,9 @@ const posts = (await getCollection("blog"))
 </Page>
 
 <style>
-  main {
-    display: block;
-  }
-
   article {
     width: 100%;
-    max-width: 960px;
+    max-width: 840px;
 
     margin: 64px auto 24px auto;
     padding: 0 24px;
@@ -100,11 +97,6 @@ const posts = (await getCollection("blog"))
       grid-template-columns: repeat(2, 1fr);
     }
   }
-  @media only screen and (min-width: 1200px) {
-    .posts {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  }
 
   .post {
     width: 100%;
@@ -119,6 +111,7 @@ const posts = (await getCollection("blog"))
   }
 
   .card {
+    position: relative;
     -webkit-tap-highlight-color: transparent;
     width: 100%;
     height: 100%;
@@ -130,8 +123,9 @@ const posts = (await getCollection("blog"))
     align-items: center;
 
     background-color: var(--color-surface);
-    border: 1px solid var(--color-outline-variant);
+
     border-radius: 28px;
+    outline: none;
 
     transition: background-color 105ms linear;
 
@@ -139,9 +133,40 @@ const posts = (await getCollection("blog"))
       &:hover {
         background-color: var(--color-secondary-container);
       }
+
+      &:hover .cover {
+        background-color: var(--color-surface-container-high);
+        color: var(--color-on-surface-variant);
+      }
     }
     &:active {
       background-color: color-mix(in srgb, var(--color-secondary-container), var(--color-on-secondary-container) 10%);
+    }
+    &:active .cover {
+      background-color: var(--color-surface-container-highest);
+      color: var(--color-on-surface);
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: inherit;
+      z-index: 1;
+      pointer-events: none;
+      border: 1px solid var(--color-outline-variant);
+    }
+    &:focus-visible::after {
+      content: "";
+      position: absolute;
+      inset: -2px;
+      border-radius: inherit;
+      outline: 3px solid var(--color-secondary);
+      z-index: 1;
+
+      animation-name: focus-grow, focus-shrink;
+      animation-delay: 0ms, 150ms;
+      animation-duration: 150ms, 450ms;
+      animation-timing-function: cubic-bezier(0, 0.2, 0, 1);
     }
   }
 
@@ -153,15 +178,18 @@ const posts = (await getCollection("blog"))
     place-items: center;
     place-content: center;
 
-    background-color: var(--color-surface-container-highest);
+    background-color: var(--color-surface-container);
     border-radius: 28px;
-    color: color-mix(in srgb, var(--color-on-surface-variant) 38%, transparent)
+    color: color-mix(in srgb, var(--color-on-surface-variant) 38%, transparent);
+    transition-property: background-color, color;
+    transition-duration: 105ms;
+    transition-timing-function: linear;
   }
   .content {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    gap: 8px;
     padding: 24px;
   }
 
@@ -172,6 +200,14 @@ const posts = (await getCollection("blog"))
     font-weight: 500;
     line-height: var(--text-headline-small-line-height);
     letter-spacing: var(--text-headline-small-letter-spacing);
+  }
+
+  .description {
+    font-family: var(--text-body-small-family);
+    font-size: var(--text-body-small-size);
+    font-weight: var(--text-body-small-weight);
+    line-height: var(--text-body-small-line-height);
+    letter-spacing: var(--text-body-small-letter-spacing);
   }
 
   .authors {
@@ -185,10 +221,16 @@ const posts = (await getCollection("blog"))
     -webkit-tap-highlight-color: transparent;
     width: fit-content;
 
+    position: relative;
+
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
+
+    padding-block: 8px;
+    padding-inline: 16px 24px;
+    border-radius: 9999px;
 
     font-family: var(--text-label-large-family);
     font-size: var(--text-label-large-size);
@@ -199,8 +241,7 @@ const posts = (await getCollection("blog"))
     font-variation-settings: "GRAD" 0;
     color: var(--color-on-surface-variant);
 
-    padding: 8px;
-    border-radius: 9999px;
+
 
     transition-property: background-color, color;
     transition-duration: 105ms;
@@ -217,6 +258,20 @@ const posts = (await getCollection("blog"))
       background-color: color-mix(in srgb, var(--color-surface), var(--color-on-surface-variant) 10%);
       color: var(--color-primary);
       font-variation-settings: "GRAD" 150;
+    }
+
+    &:focus-visible::after {
+      content: "";
+      position: absolute;
+      inset: -2px;
+      border-radius: inherit;
+      outline: 3px solid var(--color-secondary);
+      z-index: 1;
+
+      animation-name: focus-grow, focus-shrink;
+      animation-delay: 0ms, 150ms;
+      animation-duration: 150ms, 450ms;
+      animation-timing-function: cubic-bezier(0, 0.2, 0, 1);
     }
   }
 
