--- a/app/src/components/navigation/NavigationTab.astro
+++ b/app/src/components/navigation/NavigationTab.astro
@@ -61,7 +61,7 @@ const iconProps = { width: 24, height: 24 };
     gap: 8px;
 
     border-radius: 9999px;
-    padding: 0 24px;
+    padding-inline: 24px;
 
     text-decoration: none;
     font-family: var(--text-body-large-family);
