--- a/app/src/components/header/Header.astro
+++ b/app/src/components/header/Header.astro
@@ -47,7 +47,7 @@ const destinations = dynamicToStatic(Astro.url, getDestinations());
           <MenuIcon />
         </IconButton>
     </NavigationDrawer>
-    <a href="/">
+    <a class="home" href="/">
       <Logo class="logo" />
     </a>
   </div>
@@ -146,6 +146,33 @@ const destinations = dynamicToStatic(Astro.url, getDestinations());
     align-items: center;
     justify-content: center;
     gap: 16px;
+  }
+
+  .home {
+    position: relative;
+    width: 48px;
+    height: 48px;
+
+    display: grid;
+    place-items: center;
+    place-content: center;
+
+    border-radius: 8px;
+    outline: none;
+
+    &:focus-visible::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: inherit;
+      outline: 3px solid var(--color-secondary);
+      z-index: 1;
+
+      animation-name: focus-grow, focus-shrink;
+      animation-delay: 0ms, 150ms;
+      animation-duration: 150ms, 450ms;
+      animation-timing-function: var(--easing-standard);
+    }
   }
 
   .logo {
